force-app/main/default/objects/fg_Log__c/fg_Log__c.object-meta.xml
<CustomObject>
    <label>File Genie Log</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>File Genie Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Genie Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>