force-app/main/default/objects/fg_Log__c/fields/Base64ContentDoc__c.field-meta.xml
<CustomField>
    <fullName>Base64ContentDoc__c</fullName>
    <description>Stores the base 64 of the template document being used.</description>
    <inlineHelpText>Stores the base 64 of the template document being used.</inlineHelpText>
    <label>Base64ContentDoc</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>