force-app/main/default/objects/fg_Log__c/fields/Document_Data__c.field-meta.xml
<CustomField>
    <fullName>Document_Data__c</fullName>
    <label>Document Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>