force-app/main/default/objects/fg_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Stores the record ID for the record the file is being generated for.</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>