force-app/main/default/objects/fg_Log__c/fields/Template_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Doc_Type__c</fullName>
    <label>Template Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>docx</fullName>
            </value>
            <value>
                <fullName>xlsx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>