force-app/main/default/objects/fg_Log__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Title</label>
    <type>TextArea</type>
</CustomField>