force-app/main/default/objects/fg_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Template_Name__c</columns>
    <columns>Template_Doc_Type__c</columns>
    <columns>Document_Data__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>